--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.1.0",
     "date-fns": "^2.29.2",
     "file-saver": "^2.0.5",
+    "ngx-quicklink": "^0.3.0",
     "rxjs": "~7.5.0",
     "swiper": "^8.3.2",
     "tslib": "^2.3.0",
